ready to share with student

--- a/templates/LOGIN.html
+++ b/templates/LOGIN.html
@@ -1,6 +1,23 @@
 {% extends "layout.html" %}
 {% block body %}
 <body>
+        <!-- Page Header-->
+        <header class="masthead" style="background-image: url('assets/img/contact-bg.jpg')">
+            <div class="container position-relative px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <div class="page-heading">
+                           </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- Main Content-->
+        <main class="mb-4">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <div class="my-5">
 
     <div class="login-container">
         <h2>Login</h2>
@@ -11,8 +28,14 @@
             <label for="password">Password:</label><br>
 			
             <input type="password" id="password" name="password" required><br>
+			<br>
 
-            <button type="submit">Login</button>
+            <button class="btn btn-primary" type="submit">Login</button>
         </form>
     </div>
+	   </div>
+                    </div>
+                </div>
+            </div>
+        </main>
 	 {% endblock %}
